Fixed 1px Gap Bug on Certain Chromium Browsers

--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,6 +1,6 @@
 #header {
     position: sticky;
-    top: 0;
+    top: -0.5px;
     background-color: var(--bg-primary);
     padding-top: 5px;
     display: flex;
